imges name fault

--- a/index.html
+++ b/index.html
@@ -51,8 +51,7 @@
     <div class="recipe"><img src="images/mutton.jpeg" alt="Recipe 4"/><p>Succulent mutton simmered slowly in a rich, spicy gravy. Perfect for special occasions and traditional feasts.</p></div>
     <div class="recipe"><img src="images/panir.jpeg" alt="Recipe 5"/><p>Soft cottage cheese cubes cooked in a creamy, tomato-based gravy with Indian spices. A vegetarian delight full of flavor.</p></div>
     <div class="recipe"><img src="images/stack.jpeg" alt="Recipe 6"/><p>Perfectly grilled steak seasoned with herbs and garlic butter. Juicy, tender, and packed with bold meaty flavor.</p></div>
-    <div class="recipe"><img src="images/Polao.jpeg" alt="Recipe 7"/><p>A fragrant rice dish cooked with spices, ghee, and mild flavors. Often served with meat or curry for a complete meal.
-
+    <div class="recipe"><img src="images/polao.jpeg" alt="Recipe 7"/><p>A fragrant rice dish cooked with spices, ghee, and mild flavors. Often served with meat or curry for a complete meal.
 </p></div>
     <div class="recipe"><img src="images/ilishpolao.jpeg" alt="Recipe 8"/><p>A luxurious Bengali dish combining hilsa fish with fragrant polao rice. Rich, aromatic, and perfect for festive meals.</p></div>
    </section>
